@@ -1,3 +1,8 @@
+Unreleased
+
+Changed
+    Instance's will now be deleted after a migration
+
 0.11.4 - 17/01/2021
 
 Fixed
